<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnswerActivity1">

    <TextView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue"
        android:textSize="20sp" />
</LinearLayout>